# coffee-grinder-clock

./: .gitignore  .gitmodules  .project-commands  CMakeLists.txt  LICENSE  Makefile  Pipfile  README.org  build.sh  flash.sh  sdkconfig
components/font_render/: font_render.c
components/font_render/include/: font_render.h
main/: CMakeLists.txt  Kconfig  buzzer.cpp  buzzer.hh  colormap.cpp  colormap.hh  display.cpp  display.hh  fft-display.hh  fft.cpp  fft.hh  font.c  font.h  io-buttons.cpp  io-buttons.hh  main.cpp  st7789.h  streamer.cpp  streamer.hh  unicode.h
scripts/: build-compilation-database  cleanup-gyro-data.py  common.py  fetch-gyro-data-via-http.py  generate-colormap.py  read-data-over-serial.py  show-bands.py  show-fft.py  show-raw-data.py
visualisation/: main.py
